// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stories/components/inputs/DateField Basic smoke-test 1`] = `
Object {
  "checked": undefined,
  "children": Array [
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Label",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Label",
      "pressed": undefined,
      "role": "textbox",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Choose date",
      "pressed": undefined,
      "role": "button",
      "value": undefined,
    },
  ],
  "name": "stories-components-inputs-datefield--basic",
  "pressed": undefined,
  "role": "WebArea",
  "value": undefined,
}
`;

exports[`stories/components/inputs/DateField FormProps smoke-test 1`] = `
Object {
  "checked": undefined,
  "children": Array [
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Label",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "description": "Assistive text",
      "name": "Label",
      "pressed": undefined,
      "required": true,
      "role": "textbox",
      "value": "10.2.2023",
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Choose date, selected date is 10. helmi 2023",
      "pressed": undefined,
      "role": "button",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Assistive text",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
  ],
  "name": "stories-components-inputs-datefield--form-props",
  "pressed": undefined,
  "role": "WebArea",
  "value": undefined,
}
`;

exports[`stories/components/inputs/DateField Validation smoke-test 1`] = `
Object {
  "checked": undefined,
  "children": Array [
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Label",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "description": "Validation error message",
      "invalid": "true",
      "name": "Label",
      "pressed": undefined,
      "required": true,
      "role": "textbox",
      "value": "10.2.2023",
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Choose date, selected date is 10. helmi 2023",
      "pressed": undefined,
      "role": "button",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Validation error message",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
  ],
  "name": "stories-components-inputs-datefield--validation",
  "pressed": undefined,
  "role": "WebArea",
  "value": undefined,
}
`;
